import UpdateLanguageTool from "../put/update-language.js";
import { LanguageBuilder } from "./helpers/language-builder.js";
import { LanguageTestHelper } from "./helpers/language-helper.js";
import {
  createMockRequestHandlerExtra,
  setupTestEnvironment,
} from "@umbraco-cms/mcp-server-sdk/testing";

const TEST_LANGUAGE_NAME = '_Test Update Language';
const TEST_LANGUAGE_ISO = 'en-SG';
const UPDATED_LANGUAGE_NAME = '_Test Updated Language';

describe("update-language", () => {
  setupTestEnvironment();

  let builder: LanguageBuilder;

  beforeEach(async () => {
    await LanguageTestHelper.cleanup(TEST_LANGUAGE_ISO);
    builder = new LanguageBuilder();
  });

  afterEach(async () => {
    await builder.cleanup();
    await LanguageTestHelper.cleanup(TEST_LANGUAGE_ISO);
  });

  it("should update an existing language", async () => {
    // Create a language to update
    await builder
      .withName(TEST_LANGUAGE_NAME)
      .withIsoCode(TEST_LANGUAGE_ISO)
      .withIsDefault(false)
      .withIsMandatory(false)
      .create();

    // Prepare update model
    const updateModel = {
      name: UPDATED_LANGUAGE_NAME,
      isDefault: false,
      isMandatory: true,
      fallbackIsoCode: null
    };

    // Update the language
    const result = await UpdateLanguageTool.handler(
      {
        isoCode: builder.getIsoCode(),
        data: updateModel
      },
      createMockRequestHandlerExtra()
    );

    // Verify the handler response using snapshot
    expect(result).toMatchSnapshot();

    // Verify the language was updated
    const exists = await LanguageTestHelper.verifyLanguage(TEST_LANGUAGE_ISO);
    expect(exists).toBe(true);
    const language = await LanguageTestHelper.getLanguage(TEST_LANGUAGE_ISO);
    expect(language.name).toBe(UPDATED_LANGUAGE_NAME);
    expect(language.isMandatory).toBe(true);
  });

  it("should handle non-existent language", async () => {
    const nonExistentIso = "xx-XX";
    const updateModel = {
      name: UPDATED_LANGUAGE_NAME,
      isDefault: false,
      isMandatory: true,
      fallbackIsoCode: null
    };

    const result = await UpdateLanguageTool.handler(
      {
        isoCode: nonExistentIso,
        data: updateModel
      },
      createMockRequestHandlerExtra()
    );

    // Verify the error response using snapshot
    expect(result).toMatchSnapshot();
  });
});
