// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-language should handle non-existent language 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The language could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`update-language should update an existing language 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
